# movies

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: genres.py  movies.py  settings.py  tasks.py
tasks/: movies.py
