[tool.poetry]
name = "movies"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
luigi = "^3.0.2"
requests = "^2.24.0"
SQLAlchemy = "^1.3.20"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
